--- a/PearlSourceGenerators/PearlSourceGenerators.Sample/PearlSourceGenerators.Sample.csproj
+++ b/PearlSourceGenerators/PearlSourceGenerators.Sample/PearlSourceGenerators.Sample.csproj
@@ -14,4 +14,8 @@
         <None Remove="DDD.UbiquitousLanguageRegistry.txt"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
